# medlearn-vault

./: .gitattributes  .gitignore  CODEX_BOOTSTRAP_PROMPT.md  MedLearn_Cloud_Setup_Record_2026-07-11.md  PROJECT_SPEC.md  README.md  REFERENCE_REPOS.md  pyproject.toml  requirements-dev.txt  启动 MedLearn UI.cmd
.build/: pr-body.md
docs/: CLOUD_CAPTURE_ARCHITECTURE.md  CROSS_DISCIPLINARY_ARCHITECTURE.md  chapter-chunking.md  cloud-deployment.md  concept-granularity-policy.md  e2e-publication-plan-baseline.md  fast-composition.md  local-source-search.md  medical-note-template-specification.md  medlearn-plugin-setup.md  native-pdf-extraction.md  obsidian-concept-graph.md  project-handoff-import.md  publication-contracts.md  source-normalization.md  windows-sync.md  work-skill-capability-probe.md  workflow-capture-source-identity.md  workflow-contracts.md
examples/: gerd_cross_discipline.json
prompts/: deepseek_note_composer_v1.md
requirements/: ci.in  ci.txt  workflow.in  workflow.txt
schemas/: chapter_dossier.schema.json  concept_entity.schema.json  learning_capture.schema.json
scripts/: configure_medlearn_plugin_app.py  generate_ai_catalog_metadata.py  install_windows_client.ps1  release_windows.ps1  validate_schemas.py
templates/: medical_note_v1.md
tests/: test_bundle_preview.py  test_capture.py  test_catalog_update.py  test_chunking.py  test_ci_workflow.py  test_cli.py  test_composition.py  test_content_quality_release.py  test_contracts.py  test_deepseek_composer.py  test_handoff.py  test_intake.py  test_medical_note_assets.py  test_medlearn_plugin.py  (+17 more)
(+172 files in other folders)
