[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "medlearn-vault"
version = "0.7.0"
description = "Local-first contracts for a cross-disciplinary medical learning vault"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["boto3>=1.35,<2", "pydantic>=2.10,<3", "typer>=0.15,<1"]

[project.optional-dependencies]
dev = ["mypy>=1.14", "pytest>=8.3", "PyYAML>=6,<7", "ruff>=0.9"]

[project.scripts]
medlearn = "medlearn_vault.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/medlearn_vault"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
